tests/fail/parsingBoth/an id cannot start with digit.mm0
-- identifier ::= [a-zA-Z_][a-zA-Z0-9_]*
sort 0;
